--- a/module 01 - score_differentiator.ipynb
+++ b/module 01 - score_differentiator.ipynb
@@ -5,7 +5,9 @@
    "id": "b973482f",
    "metadata": {},
    "source": [
-    "Note - This is a simple script to calculate the margin of victory of University of Illinois Football games"
+    "Note - This is a simple script to calculate the margin of victory of University of Illinois Football games\n",
+    "\n",
+    "I used MS Copilot to help with the coding."
    ]
   },
   {
