worked on PEP8 Formatting

--- a/module 01 - score_differentiator.ipynb
+++ b/module 01 - score_differentiator.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "bc6ac83c",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "ee303c8f",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "bb4c196d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4c1254ef",
    "metadata": {},
    "outputs": [
@@ -101,8 +101,7 @@
       "🏈 Game on Nov 22, 2025 vs Wisconsin\n",
       "⚠️ Invalid input. Skipping this game.\n",
       "\n",
-      "🏈 Game on Nov 29, 2025 vs Northwestern\n",
-      "⚠️ Invalid input. Skipping this game.\n"
+      "🏈 Game on Nov 29, 2025 vs Northwestern\n"
      ]
     }
    ],
@@ -110,7 +109,8 @@
     "# Prompt user for scores\n",
     "for game in games:\n",
     "    date_str = datetime.strptime(\n",
-    "        game[\"date\"], \"%Y-%m-%d\").strftime(\"%b %d, %Y\")\n",
+    "        game[\"date\"], \"%Y-%m-%d\"\n",
+    "        ).strftime(\"%b %d, %Y\")\n",
     "    opponent = game[\"opponent\"]\n",
     "    print(f\"\\n🏈 Game on {date_str} vs {opponent}\")\n",
     "    try:\n",
@@ -121,7 +121,7 @@
     "            \"date\": date_str,\n",
     "            \"illinois\": illinois_score,\n",
     "            \"opponent\": opponent_score,\n",
-    "            \"diff\": diff\n",
+    "            \"diff\": diff,\n",
     "        }\n",
     "    except ValueError:\n",
     "        print(\"⚠️ Invalid input. Skipping this game.\")\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d7a1ff38",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,8 @@
      "text": [
       "\n",
       "📊 Game Results Summary:\n",
-      "Aug 29, 2025: Illinois won by 49 vs Western IL (52 - 3)\n"
+      "Aug 29, 2025: Illinois won by 49 vs Western IL (52 - 3)\n",
+      "Nov 29, 2025: Illinois won by 49 vs Northwestern (52 - 3)\n"
      ]
     }
    ],
