Adding PEP 257 documentation

--- a/module 01 - score_differentiator.ipynb
+++ b/module 01 - score_differentiator.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "bc6ac83c",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "ee303c8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of games with opponent and date (formatted as YYYY-MM-DD)\n",
+    "\"\"\" List of games with opponent and date (formatted as YYYY-MM-DD) \"\"\" \n",
     "games = [\n",
     "    {\"date\": \"2025-08-29\", \"opponent\": \"Western IL\"},\n",
     "    {\"date\": \"2025-09-06\", \"opponent\": \"Duke\"},\n",
@@ -43,24 +43,24 @@
     "    {\"date\": \"2025-11-29\", \"opponent\": \"Northwestern\"}\n",
     "]\n",
     "\n",
-    "# Sort games by date (in case they aren't already)\n",
+    "\"\"\" Sort games by date (in case they aren't already) \"\"\"\n",
     "games.sort(key=lambda x: x[\"date\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "bb4c196d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dictionary to store score differences\n",
+    "\"\"\" Create a dictionary to store score differences \"\"\"\n",
     "score_diffs = {}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4c1254ef",
    "metadata": {},
    "outputs": [
@@ -101,12 +101,14 @@
       "🏈 Game on Nov 22, 2025 vs Wisconsin\n",
       "⚠️ Invalid input. Skipping this game.\n",
       "\n",
-      "🏈 Game on Nov 29, 2025 vs Northwestern\n"
+      "🏈 Game on Nov 29, 2025 vs Northwestern\n",
+      "⚠️ Invalid input. Skipping this game.\n"
      ]
     }
    ],
    "source": [
-    "# Prompt user for scores\n",
+    "\"\"\" Prompt user for scores \"\"\"\n",
+    "\n",
     "for game in games:\n",
     "    date_str = datetime.strptime(\n",
     "        game[\"date\"], \"%Y-%m-%d\"\n",
@@ -140,8 +142,7 @@
      "text": [
       "\n",
       "📊 Game Results Summary:\n",
-      "Aug 29, 2025: Illinois won by 49 vs Western IL (52 - 3)\n",
-      "Nov 29, 2025: Illinois won by 49 vs Northwestern (52 - 3)\n"
+      "Aug 29, 2025: Illinois won by 49 vs Western IL (52 - 3)\n"
      ]
     }
    ],
